# dcaf-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions-rs/: grcov.yml
.github/workflows/: check.yml
src/: lib.rs  model.rs
src/common/: constants.rs  mod.rs  test_helper.rs
src/common/cbor_map/: mod.rs
src/common/cbor_values/: mod.rs  tests.rs
src/common/scope/: mod.rs  tests.rs
src/endpoints/: mod.rs
src/endpoints/creation_hint/: mod.rs  tests.rs
src/endpoints/token/: mod.rs  tests.rs
src/endpoints/token_req/: mod.rs  tests.rs
src/error/: mod.rs
src/model/: ace.rs  cbor_map.rs  cbor_values.rs  constants.rs
src/model/ace/: builder.rs  conversion.rs  mod.rs  tests.rs
src/model/cbor_map/: conversion.rs  mod.rs
src/model/cbor_values/: conversion.rs  mod.rs
src/token/: mod.rs  tests.rs
src/token/cose/: aad.rs  encrypt.rs  header.rs  header_util.rs  key.rs  mod.rs  sign.rs  test_helper.rs  tests.rs
src/token/cose/crypto_impl/: mod.rs  openssl.rs  tests.rs
src/token/cose/crypto_impl/openssl/: encrypt.rs  key_distribution.rs  mac.rs  mod.rs  sign.rs
src/token/cose/crypto_impl/rustcrypto/: mod.rs
src/token/cose/crypto_impl/rustcrypto/encrypt/: aead.rs  aes_ccm.rs  aes_gcm.rs  chacha_poly.rs  mod.rs
src/token/cose/crypto_impl/rustcrypto/key_distribution/: aes_key_wrap.rs  mod.rs
src/token/cose/crypto_impl/rustcrypto/mac/: aes_cbc_mac.rs  hmac.rs  mod.rs
src/token/cose/crypto_impl/rustcrypto/sign/: ecdsa.rs  mod.rs
src/token/cose/encrypt/: encrypt.rs  encrypt0.rs  mod.rs
src/token/cose/encrypt/encrypt/: mod.rs  tests.rs
src/token/cose/encrypt/encrypt0/: mod.rs  tests.rs
src/token/cose/encrypted/: mod.rs
src/token/cose/encrypted/encrypt/: mod.rs  tests.rs
src/token/cose/encrypted/encrypt0/: mod.rs  tests.rs
src/token/cose/mac/: mod.rs
src/token/cose/mac/mac/: mod.rs  tests.rs
src/token/cose/mac/mac0/: mod.rs  tests.rs
src/token/cose/maced/: mod.rs
src/token/cose/maced/mac/: mod.rs  tests.rs
src/token/cose/maced/mac0/: mod.rs  tests.rs
src/token/cose/recipient/: mod.rs
src/token/cose/sign/: mod.rs  sign.rs  sign1.rs  tests.rs
src/token/cose/sign/sign/: mod.rs  tests.rs
src/token/cose/sign/sign1/: mod.rs  tests.rs
src/token/cose/signed/: mod.rs
src/token/cose/signed/sign/: mod.rs  tests.rs
src/token/cose/signed/sign1/: mod.rs  tests.rs
src/token/cose/util/: header.rs  mac.rs  mod.rs  ops.rs  sign.rs  symm.rs
src/token/crypto_impl/: mod.rs  openssl.rs
tests/: integration_tests.rs
tests/dcaf_cose_examples/aes-ccm/: empty_payload.json
tests/dcaf_cose_examples/aes-gcm/: empty_payload.json
tests/dcaf_cose_examples/aes-kw/: empty_payload.json
tests/dcaf_cose_examples/chacha-poly/: empty_payload.json
tests/dcaf_cose_examples/ecdsa/: empty_payload.json
tests/dcaf_cose_examples/hmac/: empty_payload.json
